Remove defunct MaxPermSize flag